checked and updated all color contrast issues

--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ footer {
     width: 100%;
     height: 8rem;
     background-color: #DFBBB0;
-    color: #743F2F;
+    color: #5c2d1f;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -215,7 +215,7 @@ footer {
 }
 
 #access-link {
-    color: #743F2F;
+    color: #5c2d1f;
 }
 
 footer h1 {
